--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.1.7.RELEASE'
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
@@ -20,16 +20,36 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-parent:2.2.2.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:2.1.3.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
+    implementation 'mysql:mysql-connector-java'
+    //implementation 'org.springframework.boot.experimental:spring-boot-starter-data-r2dbc'
+    //implementation 'dev.miku:r2dbc-mysql:0.8.0.RELEASE'
+    
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
     compileOnly 'org.projectlombok:lombok'
+
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+    //testImplementation 'org.springframework.boot.experimental:spring-boot-test-autoconfigure-r2dbc'
+}
+
+dependencyManagement {
+    imports {
+        //mavenBom 'org.springframework.boot.experimental:spring-boot-bom-r2dbc:0.1.0.M3'
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
