--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
 management.endpoints.web.exposure.include: refresh
+
+---
+#Dev
+spring:
+  profiles: dev
+
+  datasource:
+      url: jdbc:mysql://127.0.0.1:3306/spring
+      username: spring
+      password: spring
