--- a/build.gradle
+++ b/build.gradle
@@ -24,23 +24,23 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-parent:2.2.2.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config:2.1.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'mysql:mysql-connector-java'
+    implementation('org.springframework.boot:spring-boot-starter-parent:2.2.2.RELEASE')
+    implementation('org.springframework.cloud:spring-cloud-starter-config:2.1.3.RELEASE')
+    implementation('org.springframework.boot:spring-boot-starter-webflux')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter-actuator')
+    implementation('mysql:mysql-connector-java')
     //implementation 'org.springframework.boot.experimental:spring-boot-starter-data-r2dbc'
     //implementation 'dev.miku:r2dbc-mysql:0.8.0.RELEASE'
     
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    developmentOnly('org.springframework.boot:spring-boot-devtools')
 
-    compileOnly 'org.projectlombok:lombok'
+    compileOnly('org.projectlombok:lombok')
 
-    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor('org.projectlombok:lombok')
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('io.projectreactor:reactor-test')
     //testImplementation 'org.springframework.boot.experimental:spring-boot-test-autoconfigure-r2dbc'
 }
 
