--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
   profiles: dev
 
   datasource:
-      url: jdbc:mysql://127.0.0.1:3306/spring
+      url: jdbc:mysql://localhost:3306/spring
       username: spring
       password: spring
