--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,8 +1,6 @@
 server.port: 8081
-
----
+health.config.enabled: false
 
 spring:
-  profiles: dev
   application.name: web
   cloud.config.uri: http://localhost:9000
