--- a/build.gradle
+++ b/build.gradle
@@ -20,19 +20,20 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/libs-snapshot' }
 }
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-parent:2.2.2.RELEASE')
     implementation('org.springframework.cloud:spring-cloud-starter-config:2.1.3.RELEASE')
     implementation('org.springframework.boot:spring-boot-starter-webflux')
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    //implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-actuator')
     implementation('mysql:mysql-connector-java')
-    //implementation 'org.springframework.boot.experimental:spring-boot-starter-data-r2dbc'
-    //implementation 'dev.miku:r2dbc-mysql:0.8.0.RELEASE'
-    
+    implementation('org.springframework.data:spring-data-r2dbc:1.0.0.RELEASE')
+    implementation 'com.github.mirromutth:r2dbc-mysql'
+    //implementation('com.github.jasync-sql:jasync-r2dbc-mysql:1.0.12')
+
     developmentOnly('org.springframework.boot:spring-boot-devtools')
 
     compileOnly('org.projectlombok:lombok')
