--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
       url: jdbc:mysql://localhost:3306/spring
       username: spring
       password: spring
+      hikari:
+        maximum-pool-size: 250
 
 logging:
   level:
